syntax = "proto3";
option java_generic_services = true;
option java_multiple_files = true;

package com.example.proto;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service ClientGreeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}
